infra/base/s3.tf
# using to save lambda source code
module "s3_bucket" {
  source                   = "terraform-aws-modules/s3-bucket/aws"
  version                  = "4.1.1"
  bucket                   = "shared-source-code"
  acl                      = "private"
  control_object_ownership = true

  versioning = {
    enabled = true
  }
}

resource "aws_vpc_endpoint" "s3" {
  vpc_id            = module.vpc.vpc_id
  service_name      = "com.amazonaws.${var.aws_region}.s3"
  vpc_endpoint_type = "Gateway"
  route_table_ids   = module.vpc.private_route_table_ids
  depends_on        = [module.vpc]
}
